--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           echo "done!"
 
-      - uses: "MC-Machinations/auto-release-changelog@latest"
+      - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
           repo_token: "${{ secrets.PRE_RELEASE_TOKEN }}"
           automatic_release_tag: "latest"
