--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,10 +16,9 @@ jobs:
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
-          repo_token: "${{ secrets.PRE_RELEASE_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
+          token: "${{ secrets.PRE_RELEASE_TOKEN }}"
+          draft: "false"
+          pre-release: "true"
           title: "Development Build"
-          files: |
-            LICENSE.txt
-            *.jar
+          # files: |
+          skip-prereleases: "true"
