--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -2,11 +2,8 @@ name: "pre-release"
 
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: Version of the new mod loader pre-release
-        required: true
-        default: "#.#.#"
+    tags:
+      - "v*"
 
 jobs:
   pre-release:
