--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -15,11 +15,8 @@ jobs:
       - name: "Update Pre Release"
         run: |
           echo "done!"
-          echo "Tags: $TAGS"
 
-      - name: Parse tag
-        id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - uses: EasyDesk/action-semver-release@v1.0.0
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
