--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -17,6 +17,12 @@ jobs:
           echo "done!"
 
       - uses: EasyDesk/action-semver-release@v1.0.0
+        with:
+          prefix: Semantic Version Release Action
+          version: v1.0.0
+          prerelease: false
+          files: |
+            LICENSE
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
