--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -20,15 +20,16 @@ jobs:
         with:
           prefix: Semantic Version Release Action
           version: v1.0.0
-          prerelease: false
+          prerelease: true
+          automatic_release_tag: "1.0.0"
           files: |
             LICENSE
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
           token: "${{ secrets.PRE_RELEASE_TOKEN }}"
-          draft: "false"
-          pre-release: "true"
+          draft: false
+          pre-release: true
           title: "Development Build"
           # files: |
-          skip-prereleases: "true"
+          skip-prereleases: true
