--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,14 +16,20 @@ jobs:
         run: |
           echo "done!"
 
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.PRE_RELEASE_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          #files: |
+
       - uses: EasyDesk/action-semver-release@v1.0.0
         with:
           prefix: Semantic Version Release Action
           version: v1.0.0
           prerelease: true
-          automatic_release_tag: "1.0.0"
-          files: |
-            LICENSE
+          #files: |
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
         with:
