--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,19 +16,12 @@ jobs:
         run: |
           echo "done!"
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.PRE_RELEASE_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          #files: |
-
       - uses: EasyDesk/action-semver-release@v1.0.0
         with:
           prefix: Semantic Version Release Action
           version: v1.0.0
           prerelease: true
+          automatic_release_tag: true
           #files: |
 
       - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
