--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -13,34 +13,26 @@ jobs:
     steps:
       # ...
       steps:
+      - name: "checkout"
       - uses: actions/checkout@v1
 
       # you'll need to add an `id` in order to access output variables
+      - name: "semantic release"
       - uses: codfish/semantic-release-action@v1
         id: semantic
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: "echo version"
       - run: echo ${{ steps.semantic.outputs.release-version }}
 
+      - name: "echo outputs"
       - run: echo "$OUTPUTS"
         env:
           OUTPUTS: ${{ toJson(steps.semantic.outputs) }}
 
+      - name: "output release version"
       - uses: codfish/some-other-action@v1
         with:
           release-version: ${{ steps.semantic.outputs.release-version }}
-
-      # - name: "Update Pre Release"
-        # run: |
-          # echo "done!"
-
-      # - uses: "MC-Machinations/auto-release-changelog@v1.1.3"
-        # with:
-          # token: "${{ secrets.PRE_RELEASE_TOKEN }}"
-          # draft: false
-          # pre-release: true
-          # title: "Development Build"
-          #files: |
-          # skip-prereleases: true
