--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3
+
       - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v3
