--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PRE_RELEASE_TOKEN }}
 
-      # - name: Create Release
-        # uses: softprops/action-gh-release@v0.1.14
-        # with:
-          # body: ${{steps.github_release.outputs.changelog}}
+      - name: Create Release
+        uses: softprops/action-gh-release@v0.1.14
+        with:
+          body: ${{steps.github_release.outputs.changelog}}
