--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: "Echo"
         run: |
-          echo ${{steps.github_release.outputs.changelog}}
+          echo $steps.github_release.outputs.changelog
 
       # - name: Create Release
         # uses: softprops/action-gh-release@v0.1.14
